Adjusted mobile bug. Fixes #38. #36 seems fixed ... Fixed z-index issues and spacing for controls. For #35

--- a/static/styles/components/_mixins.scss
+++ b/static/styles/components/_mixins.scss
@@ -54,11 +54,16 @@ $L:     1024px;
   float: $float-direction;
 }
 
-/* Vertical align element 
+/* Vertical align element
    http://zerosixthree.se/vertical-align-anything-with-just-3-lines-of-css/
 */
 @mixin vertical-align($position: relative, $value: 50%) {
   position: $position;
   top: $value;
   @include transform(translateY(-$value));
+}
+
+@mixin z-index($z-index) {
+  position: relative;
+  z-index: $z-index;
 }
